--- a/index.html
+++ b/index.html
@@ -342,10 +342,9 @@
 
     <section id="instructors" class="p-5 bg-primary">
         <div class="container">
-            <h2 class="text-center text-white">Our Instructors</h2>
+            <h2 class="text-center text-white">Our Clients</h2>
             <p class="lead text-center text-white mb-5">
-                Our instructors all have 5+ years working as a web developer in the
-                industry
+                Our clients response to our products and services
             </p>
             <div class="row g-4">
                 <div class="col-md-6 col-lg-3">
@@ -353,7 +352,7 @@
                         <div class="card-body text-center">
                             <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3"
                                 alt="" />
-                            <h3 class="card-title mb-3">John Doe</h3>
+                            <h3 class="card-title mb-3">Durbanville Plummers</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -371,7 +370,7 @@
                         <div class="card-body text-center">
                             <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3"
                                 alt="" />
-                            <h3 class="card-title mb-3">Jane Doe</h3>
+                            <h3 class="card-title mb-3">Tow Truck Durbanville</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -389,7 +388,7 @@
                         <div class="card-body text-center">
                             <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3"
                                 alt="" />
-                            <h3 class="card-title mb-3">Steve Smith</h3>
+                            <h3 class="card-title mb-3">Pool Services Northern</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -407,7 +406,7 @@
                         <div class="card-body text-center">
                             <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3"
                                 alt="" />
-                            <h3 class="card-title mb-3">Sara Smith</h3>
+                            <h3 class="card-title mb-3">Car Wash Bellville</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -424,20 +423,21 @@
     </section>
 
     <!-- Contact & Map -->
+    <!-- kan n map ook hier in gooi -->
     <section class="p-5">
         <div class="container">
             <div class="row g-4">
                 <div class="col-md">
-                    <h2 class="text-center mb-4">Contact Info</h2>
+                    <h2 class="text-center mb-4">Contact</h2>
                     <ul class="list-group list-group-flush lead">
                         <li class="list-group-item">
-                            <span class="fw-bold">Main Location:</span> 50 Main st Boston MA
+                            <span class="fw-bold">Location:</span> Somehwere Around Cape Town
                         </li>
                         <li class="list-group-item">
-                            <span class="fw-bold">Enrollment Phone:</span> (555) 555-5555
+                            <span class="fw-bold">Phone:</span> (555) 555-5555
                         </li>
                         <li class="list-group-item">
-                            <span class="fw-bold">Student Phone:</span> (333) 333-3333
+                            <span class="fw-bold">Email</span> info@letstalksolutions.co.za
                         </li>
                     </ul>
                 </div>
@@ -516,16 +516,6 @@
         crossorigin="anonymous"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
 
-    <script>
-        mapboxgl.accessToken =
-            'pk.eyJ1IjoiYnRyYXZlcnN5IiwiYSI6ImNrbmh0dXF1NzBtbnMyb3MzcTBpaG10eXcifQ.h5ZyYCglnMdOLAGGiL1Auw'
-        var map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/mapbox/streets-v11',
-            center: [-71.060982, 42.35725],
-            zoom: 18,
-        })
-    </script>
 </body>
 
 </html>
