--- a/index.html
+++ b/index.html
@@ -178,17 +178,14 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md p-5">
-                    <h2>Learn React</h2>
+                    <h2>READY TO SIMPLIFY, MAXIMIZE, AND THRIVE?
+                    </h2>
                     <p class="lead">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Similique deleniti possimus magnam corporis ratione facere!
+                        Partner with LET’S TALK SOLUTIONS today and let us show you how we can help your business shine
+                        with tailored, hassle-free VAPS/VAS management—so you can focus on what matters most: growing
+                        your business, increasing profits, and delighting your customers.
                     </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-                        reiciendis eius autem eveniet mollitia, at asperiores suscipit
-                        quae similique laboriosam iste minus placeat odit velit quos,
-                        nulla architecto amet voluptates?
-                    </p>
+
                     <a href="#" class="btn btn-light mt-3">
                         <i class="bi bi-chevron-right"></i> Read More
                     </a>
@@ -200,11 +197,11 @@
         </div>
     </section>
 
-    <section id="learn" class="p-5 bg-light text-dark">
+    <section id="learn" class="p-5 bg-success text-light">
         <div class="container-fluid">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
-                    <img src="img/undraw_progress-indicator_c14b.svg" class="img-fluid" alt="" />
+                    <img src="img/undraw_online-collaboration_xon8.svg" class="img-fluid" alt="" />
                 </div>
                 <div class="col-md p-5">
                     <h2>MANAGING VALUE-ADDED SERVICES SUCCESSFULLY</h2>
