--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="enrollLabel">Enrollment</h5>
+                    <h5 class="modal-title" id="enrollLabel">Leave your details:</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
