--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <!-- Question Accordion -->
     <section id="questions" class="p-5 bg-dark text-light">
         <div class="container bg-dark">
-            <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+            <h2 class="text-center mb-4">Any Questions...?</h2>
             <div class="accordion accordion-flush" id="questions">
                 <!-- Item 1 -->
                 <div class="accordion-item">
