--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <title>Let's Talk Solutions</title>
 </head>
 
@@ -17,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
-            <a href="#" class="navbar-brand">Talk Solutions</a>
+            <a href="#" class="navbar-brand text-warning">Let's Talk Solutions</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
@@ -48,7 +53,7 @@
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
                     <h2><span class="text-warning">Solutions Simplified | Value Maximized</span></h2>
-                    <h5><span class="text-primary">THE FUTURE OF WELL MANAGED VALUE-ADDED SERVICES!</span></h5>
+                    <h5><span class="text-primary">FUTURE OF WELL MANAGED VALUE-ADDED SERVICES!</span></h5>
                     <button class="btn btn-primary btn-md" data-bs-toggle="modal" data-bs-target="#enroll">
                         Contact Us
                     </button>
@@ -59,8 +64,12 @@
     </section>
 
     <section id="about" class="bg-secondary p-5 text-light">
-        <div class="conatiner">
-            <p>At LET’S TALK SOLUTIONS, we take the complexity out of managing, designing, and delivering innovative,
+        <div class="container text-center p-3 ">
+            <p>At <span class="text-warning fw-bold">LET’S TALK SOLUTIONS</span>, we take the
+                complexity out of
+                managing,
+                designing, and
+                delivering innovative,
                 value-added products and services (VAPS/VAS). Our approach is simple yet powerful: we craft customized,
                 seamless solutions that allow your business to thrive without the hassle. We manage everything from
                 end-to-end management and support to design and reporting, all while ensuring your VAPS/VAS are managed
@@ -76,6 +85,7 @@
                 well-being. This unique approach informs us of everything we do, ensuring our operations are driven by
                 values that make a global difference.
             </p>
+            <hr>
 
             <h1 class="text-center text-warning">What Are Our Goals?</h1>
             <p>To help you attract more customers, boost revenue, and increase profits by enhancing the appeal of your
@@ -424,8 +434,8 @@
     <section class="p-5">
         <div class="container">
             <div class="row g-4">
-                <div class="col-md">
-                    <h2 class="text-center mb-4">Contact</h2>
+                <div class="col-md text-center">
+                    <h2 class="text-center mb-2">Contact</h2>
                     <ul class="list-group list-group-flush lead">
                         <li class="list-group-item">
                             <span class="fw-bold">Location:</span> Somehwere Around Cape Town
@@ -446,7 +456,7 @@
     <section class="bg-primary text-light p-3">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
-                <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
+                <h3 class="mb-3 mb-md-0">Newsletter Sign Up</h3>
 
                 <div class="input-group news-input">
                     <input type="text" class="form-control" placeholder="Enter Email" />
