--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#learn" class="nav-link">About</a>
+                        <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="#questions" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#instructors" class="nav-link">Blog</a>
+                        <a href="#blog" class="nav-link">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a href="#instructors" class="nav-link">Contact</a>
@@ -66,11 +66,8 @@
     <section id="about" class="bg-secondary p-5 text-light">
         <div class="container text-center p-3 ">
             <p>At <span class="text-warning fw-bold">LET’S TALK SOLUTIONS</span>, we take the
-                complexity out of
-                managing,
-                designing, and
-                delivering innovative,
-                value-added products and services (VAPS/VAS). Our approach is simple yet powerful: we craft customized,
+                complexity out of managing, designing, and delivering innovative, value-added products and services
+                (VAPS/VAS). Our approach is simple yet powerful: we craft customized,
                 seamless solutions that allow your business to thrive without the hassle. We manage everything from
                 end-to-end management and support to design and reporting, all while ensuring your VAPS/VAS are managed
                 for maximum profitabiity—so you can focus on what truly matters: growing your core business.
@@ -86,7 +83,6 @@
                 values that make a global difference.
             </p>
             <hr>
-
             <h1 class="text-center text-warning">What Are Our Goals?</h1>
             <p>To help you attract more customers, boost revenue, and increase profits by enhancing the appeal of your
                 offerings. VAPS and VAS are the sweet spots where consumer prices meet production costs, creating
@@ -97,7 +93,7 @@
     </section>
 
     <!-- Boxes -->
-    <section class="p-5">
+    <section class="p-5" id="blog">
         <div class="container">
             <div class="row text-center g-4">
                 <h1>Blog Kom Dalk Hier?</h1>
@@ -431,7 +427,7 @@
 
     <!-- Contact & Map -->
     <!-- kan n map ook hier in gooi -->
-    <section class="p-5">
+    <section class="p-5" id="contact">
         <div class="container">
             <div class="row g-4">
                 <div class="col-md text-center">
