--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <div class="container-lg">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
-                    <h2><span class="text-warning">Solutions Simplified | Value Maximized</span></h2>
+                    <h2><span class="text-warning">Solutions Simplified <span class="text-light">|</span> Value
+                            Maximized</span></h2>
                     <h5><span class="text-primary">FUTURE OF WELL MANAGED VALUE-ADDED SERVICES!</span></h5>
                     <button class="btn btn-primary btn-md" data-bs-toggle="modal" data-bs-target="#enroll">
                         Contact Us
